--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,17 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-header h1 {
+  margin-bottom: 1rem;
 }
 
 .App-link {
@@ -35,4 +39,48 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* -- Global App styling -- */
+
+.row
+{
+  margin-bottom: 0.5em;
+  text-align:left;
+  padding: 0 25%;
+}
+
+nav {
+  background-color:dimgrey;
+  width:100vw;
+  padding: 0.5rem !important;
+  margin:0px;
+  text-align:center !important;
+  margin-bottom:0px !important;
+}
+
+nav a,
+nav a:active,
+nav a:visited
+{
+  color:#ffffff;
+  margin:0 2rem;
+}
+
+nav a:hover
+{
+  color:goldenrod;
+  text-decoration: none;
+}
+
+.loginForm h3 {
+  border-bottom: 2px solid dimgrey;
+  margin: 2rem 25%;
+  padding-bottom:0.25rem;
+}
+
+/* -- Global Form styling -- */
+label {
+  min-width:90px;
+  display:inline-block;
 }
